# bevy_sprite3d

./: Cargo.toml  FORK_FEATURES.md  PR_EVALUATION.md  license.md  readme.md  rust-toolchain.toml  rustfmt.toml  spritesheet_padding.py
assets/dungeon/art/: attribution.txt
examples/: dungeon.rs  sprite.rs  sprite_sheet.rs
examples/bevy_asset_loader/: sprite.rs  sprite_sheet.rs
src/: lib.rs  prelude.rs  quad.rs  utils.rs
tests/: fork_features.rs
