[package]
name = "bevy_sprite3d"
version = "7.0.0-rc"
edition = "2021"

description = "Bevy Plugin to allow using 2d sprites in a 3d scene."
license = "MIT"
readme = "readme.md"
repository = "https://github.com/FraserLee/bevy_sprite3d"
keywords = ["gamedev", "bevy", "sprite", "3d"]

[dependencies.bevy]
version = "0.17.0-rc"
default-features = false
features = ["bevy_asset", "bevy_pbr", "bevy_sprite", "png", "std"]

[dev-dependencies]
bevy.version = "0.17.0-rc" # (include default features when running examples)
rand = "0.8"
